--- a/assets/css/website.css
+++ b/assets/css/website.css
@@ -158,7 +158,7 @@
 	overflow: hidden;
 }
 #inner-wrap {
-	position: relative;
+	position: absolute;
 	width: 960px;
 	margin: 0 auto;
 }
